# VectorAnalyticsEngine

./: .gitignore  CMakeLists.txt  README.md
lib/: AdvancedAutoVecPlugin.cpp  AdvancedFrontendOptimizations.cpp  AdvancedLoopOptimizations.cpp  AutoVecPlugin.cpp  GPUOffloadingAnalyzer.cpp  MLCostModel.cpp
test/: test_non_vectorizable.cpp  test_vectorizable.cpp
